--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-    <title>Akhilesh Gandotra</title>
+    <body>
+    <h1>Akhilesh Gandotra</h1>
+        </body>
 </head>   
 </html>
     
