--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Kanwar Ujjaval Singh</title>
+    <title>AKHILESH GANDOTRA</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--[if lte IE 8]>
@@ -22,7 +22,7 @@
 
         <!-- Logo -->
         <div id="logo">
-            <h1 id="title">Kanwar Ujjaval Singh</h1>
+            <h1 id="title">Akhilesh Gandotra</h1>
             <span class="image avatar48"><img style="border-radius: 100%;" src="images/avatar.png" alt=""/></span>
             <p>Full Stack Developer</p>
         </div>
@@ -57,14 +57,12 @@
 
         <!-- Social Icons -->
         <ul class="icons">
-            <li><a href="http://in.linkedin.com/in/kanwarujjaval/" class="icon fa-linkedin" target="_blank"><span
+            <li><a href="https://www.linkedin.com/in/akhilesh-gandotra-73b034112" class="icon fa-linkedin" target="_blank"><span
                     class="label">LinkedIn</span></a></li>
-            <li><a href="https://www.facebook.com/kanwarujjaval" class="icon fa-facebook" target="_blank"><span
+            <li><a href="https://www.facebook.com/akhilesh.gandotra" class="icon fa-facebook" target="_blank"><span
                     class="label">Facebook</span></a></li>
-            <li><a href="https://github.com/kanwarujjaval" class="icon fa-github" target="_blank"><span class="label">Github</span></a>
+            <li><a href="https://github.com/akhilesh-gandotra" class="icon fa-github" target="_blank"><span class="label">Github</span></a>
             </li>
-            <li><a href="https://twitter.com/kanwarujjaval" class="icon fa-twitter" target="_blank"><span
-                    class="label">Twitter</span></a></li>
             <li>
                 <a href="mailto:&#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
                    class="icon fa-envelope"><span class="label">Email</span></a></li>
@@ -80,11 +78,11 @@
         <div class="container">
 
             <header>
-                <h2 class="alt"><strong>Hi!</strong><br/> I'm <strong>Kanwar Ujjaval Singh</strong><br/>full stack
-                    developer</h2>
+                <h2 class="alt"><strong>Hi!</strong><br/> I'm <strong>Akhilesh Gandotra</strong><br/>iOS Developer
+                    </h2>
                 <p>Get in Touch with me at <a
-                        href="mailto:&#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
-                    &#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+                        href="mailto:akgandotra@gmail.com?Subject=Saw%20your%20profile;">
+                   </a>
             </header>
 
             <footer>
