--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Logo -->
         <div id="logo">
             <h1 id="title">Akhilesh Gandotra</h1>
-            <span class="image avatar48"><img style="border-radius: 100%;" src="C:\Users\Hp-user\Desktop\28898683.jpeg" alt=""/></span>
+            <span class="image avatar48"><img style="border-radius: 100%;" src="https://github.com/akhilesh-gandotra/akhilesh-gandotra.github.io/blob/master/28898683.jpeg" alt=""/></span>
             <p>Full Stack Developer</p>
         </div>
 
@@ -57,11 +57,11 @@
 
         <!-- Social Icons -->
         <ul class="icons">
-            <li><a href="http://in.linkedin.com/in/kanwarujjaval/" class="icon fa-linkedin" target="_blank"><span
+            <li><a href="https://www.linkedin.com/in/akhilesh-gandotra-73b034112/" class="icon fa-linkedin" target="_blank"><span
                     class="label">LinkedIn</span></a></li>
-            <li><a href="https://www.facebook.com/kanwarujjaval" class="icon fa-facebook" target="_blank"><span
+            <li><a href="https://www.facebook.com/akhilesh.gandotra" class="icon fa-facebook" target="_blank"><span
                     class="label">Facebook</span></a></li>
-            <li><a href="https://github.com/kanwarujjaval" class="icon fa-github" target="_blank"><span class="label">Github</span></a>
+            <li><a href="https://github.com/akhilesh-gandotra" class="icon fa-github" target="_blank"><span class="label">Github</span></a>
             </li>
             <li><a href="https://twitter.com/kanwarujjaval" class="icon fa-twitter" target="_blank"><span
                     class="label">Twitter</span></a></li>
