--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
             <footer>
                <p><i class="fa fa-download" aria-hidden="true"></i>
-                <a style="border-bottom: none;" href="resume_kanwar_ujjaval_singh.pdf" target="_blank">Download Resume</a>
+                <a style="border-bottom: none;" href="AkhileshGandotraResume.pdf" target="_blank">Download Resume</a>
                 <br/>
                    <!--<i class="fa fa-external-link" aria-hidden="true"></i>
                     <a style="border-bottom: none;" href="http://ujjaval.in/" target="_blank">Read Blog</a></p>-->
