--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Logo -->
         <div id="logo">
             <h1 id="title">Akhilesh Gandotra</h1>
-            <span class="image avatar48"><img style="border-radius: 100%;" src="https://github.com/akhilesh-gandotra/akhilesh-gandotra.github.io/blob/master/28898683.jpeg" alt=""/></span>
+            <span class="image avatar48"><img style="border-radius: 100%;" src="https://raw.githubusercontent.com/akhilesh-gandotra/akhilesh-gandotra.github.io/master/28898683.jpeg" alt=""/></span>
             <p>Full Stack Developer</p>
         </div>
 
