--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li><a href="https://twitter.com/kanwarujjaval" class="icon fa-twitter" target="_blank"><span
                     class="label">Twitter</span></a></li>
             <li>
-                <a href="mailto:&#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"
+                <a href="mailto:akgandotra90@gmail.com;"
                    class="icon fa-envelope"><span class="label">Email</span></a></li>
         </ul>
 
