--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <h2 class="alt"><strong>Hi!</strong><br/> I'm <strong>Akhilesh Gandotra</strong><br/>full stack
                     developer</h2>
                 <p>Get in Touch with me at <a
-                        href="mailto:&#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">
-                    &#117;&#106;&#106;&#097;&#118;&#097;&#108;&#107;&#097;&#110;&#119;&#097;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
+                        href="mailto:akgandotra90@gmail.com;">
+                    akgandotra90@gmail.com;</a>
             </header>
 
             <footer>
