--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
             <header>
                 <h2>Education</h2>
             </header>
-            <strong>UNIVERSITY INSTITUTE OF INFORMATION TECHNOLOGY<br/>H.P.U. SHIMLA</strong><br/>
-            Graduating in June 2016<br/><br/>
+            <strong>UNIVERSITY INSTITUTE OF ENGINEERING AND TECHNOLOGY<br/>PANJAB UNIVERSITY(CHD)</strong><br/>
+            Graduated in June 2016<br/><br/>
 
-            <strong>D.A.V. PUBLIC SCHOOL NEW SHIMLA, SHIMLA</strong><br/>
+            <strong>DELHI PUBLIC SCHOOL, JAMMU</strong><br/>
             Class 10th &ndash; 9.8 (CGPA) - 2010 <br/>
-	    Class 12th &ndash; 79.8% - 2012
+	    Class 12th &ndash; 90% - 2012
         </div>
     </section>
 
