--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     developer</h2>
                 <p>Get in Touch with me at <a
                         href="mailto:akgandotra90@gmail.com;">
-                    akgandotra90@gmail.com;</a>
+                    akgandotra90@gmail.com</a>
             </header>
 
             <footer>
