--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="logo">
             <h1 id="title">Akhilesh Gandotra</h1>
             <span class="image avatar48"><img style="border-radius: 100%;" src="https://raw.githubusercontent.com/akhilesh-gandotra/akhilesh-gandotra.github.io/master/28898683.jpeg" alt=""/></span>
-            <p>Full Stack Developer</p>
+            <p>iOS Developer</p>
         </div>
 
         <!-- Nav -->
