--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     class="label">Facebook</span></a></li>
             <li><a href="https://github.com/akhilesh-gandotra" class="icon fa-github" target="_blank"><span class="label">Github</span></a>
             </li>
-            <li><a href="https://twitter.com/kanwarujjaval" class="icon fa-twitter" target="_blank"><span
-                    class="label">Twitter</span></a></li>
+<!--             <li><a href="https://twitter.com/kanwarujjaval" class="icon fa-twitter" target="_blank"><span
+                    class="label">Twitter</span></a></li> -->
             <li>
                 <a href="mailto:akgandotra90@gmail.com;"
                    class="icon fa-envelope"><span class="label">Email</span></a></li>
