--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
             <header>
                 <h2>Experience</h2>
             </header>
-            <p>
+<!--             <p>
                 <strong>MEAN STACK FREELANCE DEVELOPER</strong><br/>
                 <a href="http://freelancer.com/u/ujjavalkanwar.html">Freelancer Profile</a><br/>
                 <small>December 2015 &ndash; March 2016</small>
+            </p> -->
+            <p>
+                <strong>iOS DEVELOPER</strong><br/>
+                Clicklabs, Chandigarh<br/>
+                <small>Jul 2016 - Present</small>
             </p>
             <p>
-                <strong>ANGULAR/NODE DEVELOPER</strong><br/>
-                Internship at Ravenspec Ltd,Buckinghamshire, U.K<br/>
-                <small>April 2015 - May 2015</small>
-            </p>
-            <p>
-                <strong>PHP/LAMP FREELANCE DEVELOPER</strong><br/>
-                <small>October 2014 &ndash; January 2015</small><br/>
+                <strong>Software Engineer Intern</strong><br/>
+                <small>Jan 2016 &ndash; July 2016</small><br/>
             </p>
         </div>
     </section>
