--- a/index.html
+++ b/index.html
@@ -129,23 +129,25 @@
             </header>
 
 
-            <h3>Open Cloud School</h3>
-            Created REST API using Node.js and consumed by Angular.js frontend for Learning Management System<br/>
-            <i>Source: https://github.com/kanwarujjaval/ocs</i><br/><br/>
-            <h3>Logic Gate Simulation App</h3>
-            Created Windows 8.1 Store application using the WinJS API and published on the Windows 8.1 Store<br/>
-            <i>Source: https://github.com/kanwarujjaval/Logic-Simulation</i><br/><br/>
-            <h3>Profile Managent System</h3>
-            Created a Student Profile Management Portal in PHP, Apache and MySQL, with Responsive frontend written in CSS3<br/>
-            <i>Source: https://github.com/kanwarujjaval/profiles</i><br/><br/>
-            <h3>Twitter Data Miner</h3>
-            Created a Data Mining Command Line Script in Node.js to mine Tweets from the Twitter real time API.<br/>
-            <i>Source: https://github.com/kanwarujjaval/TwitterMiner</i><br/><br/>
-            <h3>cooperacy.org Server</h3>
-            Created Node.JS server and Backend to host the cooperacy.org site and allow connection and Read/Write Requests to MongoDB<br/>
-            <i>Source: https://github.com/cooperacy/server</i><br/>
-            Included in team to present Poster at Collective Intelligence conference by University of Michigan<br/>
-            <i>http://sites.lsa.umich.edu/collectiveintelligence/posters/</i>
+            <h3>Praos Health</h3>
+            Its a hospital staffing project and now a retainer. Includes good quality of code and Facade design pattern.
+   <br/>
+            <i>Link:  https://itunes.apple.com/in/app/praos-health/id1229105635</i><br/><br/>
+            <h3>Clinic World App</h3>
+            Medical and health care app.  On demand doctor patient app.Search doctor by name or location.Can search labrooms too.Can read medical topics and feeds on the app.
+Chat and video call implemented. Worked on VOIP push. Extensive use of table and collection views.<br/>
+<!--             <i>Source: https://github.com/kanwarujjaval/Logic-Simulation</i><br/><br/> -->
+            <h3>Chasing A Day</h3>
+           Working model of on demand jobs in Australia. Included punch in, punch out. A clean memory managed project based on facade pattern. Created different data models and Api managers.<br/>
+<!--             <i>Source: https://github.com/kanwarujjaval/profiles</i><br/><br/> -->
+            <h3>Asure Force</h3>
+            A punch app for the job workers to start and end their shift, includes various hierarchies and job transfer. Worked on location and its delegates.Includes a side menu for switching on various tabs . Can see and edit profile, includes offline functionality  too.<br/>
+<!--             <i>Source: https://github.com/kanwarujjaval/TwitterMiner</i><br/><br/> -->
+            <h3>FirePie</h3>
+             Pizza delivery app. included Live tracking through sockets. Use of  google maps and path drawing.<br/>
+<!--             <i>Source: https://github.com/cooperacy/server</i><br/> -->
+<!--             Included in team to present Poster at Collective Intelligence conference by University of Michigan<br/>
+            <i>http://sites.lsa.umich.edu/collectiveintelligence/posters/</i> -->
 
 
         </div>
