--- a/index.html
+++ b/index.html
@@ -136,15 +136,18 @@
             <h3>Clinic World App</h3>
             Medical and health care app.  On demand doctor patient app.Search doctor by name or location.Can search labrooms too.Can read medical topics and feeds on the app.
 Chat and video call implemented. Worked on VOIP push. Extensive use of table and collection views.<br/>
-<!--             <i>Source: https://github.com/kanwarujjaval/Logic-Simulation</i><br/><br/> -->
+<!--             <i>Source: https://github.com/kanwarujjaval/Logic-Simulation</i><br/> -->
+		<br/>
             <h3>Chasing A Day</h3>
            Working model of on demand jobs in Australia. Included punch in, punch out. A clean memory managed project based on facade pattern. Created different data models and Api managers.<br/>
 <!--             <i>Source: https://github.com/kanwarujjaval/profiles</i><br/><br/> -->
+		<br/>
             <h3>Asure Force</h3>
             A punch app for the job workers to start and end their shift, includes various hierarchies and job transfer. Worked on location and its delegates.Includes a side menu for switching on various tabs . Can see and edit profile, includes offline functionality  too.<br/>
 <!--             <i>Source: https://github.com/kanwarujjaval/TwitterMiner</i><br/><br/> -->
+		<br/>
             <h3>FirePie</h3>
-             Pizza delivery app. included Live tracking through sockets. Use of  google maps and path drawing.<br/>
+             Pizza delivery app. included Live tracking through sockets. Use of  google maps and path drawing.<br/><br/>
 <!--             <i>Source: https://github.com/cooperacy/server</i><br/> -->
 <!--             Included in team to present Poster at Collective Intelligence conference by University of Michigan<br/>
             <i>http://sites.lsa.umich.edu/collectiveintelligence/posters/</i> -->
