--- a/index.html
+++ b/index.html
@@ -163,31 +163,22 @@ Chat and video call implemented. Worked on VOIP push. Extensive use of table and
                 <h2>Skills</h2>
             </header>
 
-            <h3>Full Stack web development</h3>
-            MEAN and LAMP Stack<br/><br/>
+            <h3>iOS Development</h3>
+           1.8 months of developing experience, Love to learn and share my knowledge. Worked on swift 2.3, 3, 3.1 till now.<br/><br/>
 
             <h3>Programming Languages</h3>
 
-            JavaScript, Python, PHP, R, C/C++, SQL<br/><br/>
-            <h3>Frameworks and Libraries</h3>
+            Swift,C,C++<br/><br/>
 
-            Node.JS, ExpressJS, hapiJS, AngularJS, BootStrap, Grunt/Gulp, WinJS, Django, Ionic<br/><br/>
             <h3>Application Development</h3>
 
-            Windows Phone, Windows Store and Phonegap/Cordova<br/><br/>
-            <h3>Database Applications</h3>
+            Worked extensively on developing various projects.Currently have expirience on 5 on demand projects.Implemented maps, location, chatting, developing UI, UX, animations, data storage , image rendering etc. <br/><br/>
+            <h3>Skill Set</h3>
 
-            MongoDB, Redis, MySQL, MariaDB, Oracle<br/><br/>
+            UIKit & AutoLayouts, REST Api integration, Social Api integration (Facebook, Google, Linked In), Event Kit, Google and Apple Maps, Core Location, Cocoa Pods, Socket IO, Memory Management, VOIP<br/><br/>
             <h3>Tools and Environments</h3>
 
-            Git, DiffTool, Fiddler, Firebug, Github, Visual Studio, Eclipse, Bitbucket and Issue management-Jira, Travis CI, GCC, Virtual Box, Hyper-V, Google Cloud Compute<br/><br/>
-            <h3>Applications</h3>
-
-            Wordpress, Joomla, Drupal, Apache, Ghost, OpenShift, phpMyAdmin<br/><br/>
-            <h3>Operating Systems</h3>
-
-            Windows 8, 8.1, 10, Linux : Ubuntu, Debian, Arch, Fedora, Centos<br/><br/>
-
+            XCode, Git, Github, GitLab, Bitbucket and Issue management-Jira,Pivotal trackker<br/><br/>
 
            <!-- <div class="row">
                 <div class="4u 12u$(mobile)">
