--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ Chat and video call implemented. Worked on VOIP push. Extensive use of table and
             <header>
                 <h2>Education</h2>
             </header>
-            <strong>UNIVERSITY INSTITUTE OF ENGINEERING AND TECHNOLOGY<br/>PANJAB UNIVERSITY(CHD)</strong><br/>
+            <strong>UNIVERSITY INSTITUTE OF ENGINEERING AND TECHNOLOGY, HOSHIARPUR<br/>PANJAB UNIVERSITY(CHD)</strong><br/>
             Graduated in June 2016<br/><br/>
 
             <strong>DELHI PUBLIC SCHOOL, JAMMU</strong><br/>
