--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
                 <a href="http://freelancer.com/u/ujjavalkanwar.html">Freelancer Profile</a><br/>
                 <small>December 2015 &ndash; March 2016</small>
             </p> -->
+	     <p>
+                <strong>Product Engineer</strong><br/>
+                Gojek, Gurgaon<br/>
+                <small>Nov 2019 - Present</small>
+            </p>
+	     <p>
+                <strong>Software Developer Engineer 2</strong><br/>
+                Hindustan Times, New Delhi<br/>
+                <small>Sept 2018 - Nov 2019</small>
+            </p>
+	     <p>
+                <strong>iOS Developer</strong><br/>
+                Fitso, Gurgaon<br/>
+                <small>Apr 2018 - Sept 2018</small>
+            </p>
+		
             <p>
                 <strong>iOS DEVELOPER</strong><br/>
                 Clicklabs, Chandigarh<br/>
